--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto&display=swap" rel="stylesheet">
+
     <title>Smarty Library</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <main class="container">
-      <div class="top-navigation">
-        <div class="top-navigation-left">
-          <input type="text" placeholder="search for your favorite books" />
+    <body class="background">
+      <main class="container">
+        <div class="top-navigation">
+          <div class="top-navigation-left">
+            <input type="text" placeholder="search for your favorite books" />
 
-          <div class="top-navigation-heading">
+            <div class="top-navigation-heading">
             <h1>Smarty <br> Library</h1>
+            </div>
           </div>
-        </div>
 
-        <div class="top-navigation-right">
+         <div class="top-navigation-right">
           <img src="./assets/profile.png" alt="profileIcon" />
           <img src="./assets/mail.png" alt="mainIcon" />
           <img src="./assets/like.png" alt="likeIcon" />
           <img src="./assets/wholeCart.png" alt="shopIcon" />
-        </div>
-      </div>
-      <div class="topgrid">
-        <div class="secrow">
+         </div>
+       </div>
+       <div class="topgrid">
+         <div class="secrow">
           <ul>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Authors</a></li>
@@ -34,26 +39,27 @@
             <li><a href="#">About US</a></li>
             <li><a href="#"><span>Sale!</a></li></span>
           </ul>
-        </div>
-      </div>
-      <div class="quote">
+         </div>
+       </div>
+        <div class="quote">
         <p style="font-size: 40px;">Let Us Help You Find <br>The Right Book!</p>
-      </div>
+       </div>
 
-        <div class="circle"><p style="font-size: 30px;">15% off Sitewide</p></div>
+          <div class="circle"><p style="font-size: 30px;">15% off Sitewide</p></div>
 
 
-        <div class="footer-container">
-            <div class="footer-left">
+          <div class="footer-container">
+              <div class="footer-left">
                 <img src="./assets/fbook.png" alt="facebookLogo">
                 <img src="./assets/insta.png" alt="instagramLogo">
                 <img src="./assets/tweet.png" alt="twitterLogo">
                 <img src="./assets/mail2.png" alt="mailLogo">
-            </div>
-            <div class="footer-right"><button>Contact Us
-            </button></div>
+             </div>
+             <div class="footer-right"><button>Contact Us
+             </button></div>
             
         </div>
     </main>
+   </body>
   </body>
 </html>
